--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,8 +11,39 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Welcome to</h1>
-    <h1><span class="orange-color">My Site!</span></h1>
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome to</h1>
+            <h1><span class="orange-color">My Site!</span></h1>
+
+            <h3>A learner and entry level developer</h3>
+            <p>A recent graduate willing to contribute in the software development industry. Not a hardcore coder but
+                eager
+                to learn quickly to make myself an asset for the company.
+                Love to play cricket and online multiplayer games. Spending leisure time with pet cat and Medium.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/sm-naief/">Hire Me</a>
+        </div>
+
+        <div class="half-width">
+            <img src="images\pro_pic-bg.png" alt="">
+        </div>
+    </section>
+
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images\3-bg-preview.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Dummy Text</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ex perspiciatis consectetur, officia illo
+                amet mollitia sequi esse earum veniam vero fugiat optio asperiores non distinctio suscipit, libero nemo
+                blanditiis totam fuga tempora. Doloribus cumque doloremque quibusdam rerum voluptas aliquam.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/sm-naief/">Hire Me</a>
+        </div>
+    </section>
 </body>
+
 </html>
